# mako

./: .build.yml  .gitignore  Dockerfile.builder  Dockerfile.debian  LICENSE  README.md  cairo-pixbuf.c  config.c  config.in  criteria.c  dbus.c  event-loop.c  fr.emersion.mako.service.in  hotspot.c  icon.c  main.c  main.h  mako.1.scd  mako.5.scd  mako.systemd.service.in  makoctl  makoctl.1.scd  makoctl.c  makoctl.libdbus  meson.build  meson_options.txt  mode.c  notification.c  pango.c  pool-buffer.c  render.c  set.c  string-util.c  surface.c  types.c  types.h  wayland.c
.builds/: alpine.yml  archlinux.yml  freebsd.yml
apparmor/: meson.build
contrib/: openrc-user.init
contrib/apparmor/: fr.emersion.Mako
contrib/completions/: meson.build
contrib/completions/bash/: mako  makoctl
contrib/completions/fish/: mako.fish  makoctl.fish
contrib/completions/zsh/: _mako  _makoctl
contrib/systemd/: mako.service  mako.service.in  meson.build
dbus/: dbus.c  mako.c  subd-sdbus.c  subd-vtable.c  subd-watch.c  xdg.c
doc/: mako.1.scd  mako.5.scd  makoctl.1.scd  meson.build
examples/: config
include/: cairo-pixbuf.h  config.h  criteria.h  dbus.h  enum.h  event-loop.h  hotspot.h  icon.h  mako.h  mode.h  notification.h  pango.h  pool-buffer.h  render.h  set.h  string-util.h  styling.h  subd-sdbus.h  subd.h  surface.h  types.h  wayland.h
protocol/: meson.build
subprojects/: keulim.wrap
