option('icons', type: 'feature', value: 'auto', description: 'Enable icon support')
option('man-pages', type: 'feature', value: 'auto', description: 'Generate and install man pages')
option('fish-completions', type: 'boolean', value: false, description: 'Install fish completions')
option('zsh-completions', type: 'boolean', value: false, description: 'Install zsh completions')
option('apparmor', type: 'boolean', value: 'false', description: 'Install AppArmor profile')
option('systemd', type: 'feature', value: 'auto', description: 'Install systemd user service unit')
